# servant-elm-auth0

./: .gitignore  LICENSE  README.md  elm.json  package.json  servant-elm-auth0.cabal  stack.yaml
app/: Main.hs
assets/elm/: index.html
assets/elm/src/: Main.elm
assets/static/: index.html
config/: tmpl.cfg.json
src/: Config.hs  Controller.hs  Lib.hs  Routes.hs  Types.hs
src/Types/: Config.hs
